@@ -1,0 +1,2 @@
+body{ margin: 0; }
+.abc{ color: #ff0000; }
