@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<link rel="stylesheet" href="media/send_html.css">
+</head>
+<body>
+	<p class="abc">ピーボディー</p>
+</body>
+</html>
