@@ -1,0 +1,9 @@
+<mail>
+<subject>テストサブジェクト</subject>
+<body>
+ボディーテスト{$abc}
+</body>
+<html src="send_html.html">
+	<media src="media/send_html.css" />
+</html>
+</mail>
